<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textblurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fr_textblurb"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/edittext_malUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fr_hint_user" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext_malPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fr_hint_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_connectToMal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fr_button_signin" />

</LinearLayout>